[package]
name = "unaf-cli"
description = "U.N.A.F.; [U]SAGI.[N]ETWORK [A]pplication [F]ramework :: [Cli]ent module"
version = "0.0.0"
edition = "2021"
authors = ["USAGI.NETWORK / Usagi Ito <the@usagi.network>"]
license = "MIT"
repository = "https://github.com/usagi/unaf-cli"
categories = ["wasm", "web-programming::http-client", "gui"]
keywords = ["unaf", "client", "app-framework", "usagi-network", "web"]
documentation = "https://docs.rs/unaf-cli/"

[dependencies]
